# anorha-control

./: .gitignore  COMMIT_MESSAGE.txt  Modelfile.qwen3-vl-nothink  README.md  anorhaTRM.md  debug_vision.py  evaluate_vision_models.py  logs.txt  main.py  pyproject.toml  requirements.txt  test_vision_simple.py  transcript.txt
.cursor/plans/: overall_product_impact_analysis_02d2dbec.plan.md
anorha_control/: __init__.py  config.py  main.py  model_server.py
anorha_control/dashboard/: __init__.py  app.py
anorha_control/exploration/: __init__.py  async_explorer.py  execution_backend.py  grounding_harness.py  passive_recorder.py  sandbox_explorer.py  smart_data_gatherer.py  task_curriculum.py  tasks.py
anorha_control/knowledge/: __init__.py  database.py  embeddings.py
anorha_control/models/: __init__.py  computer_agent.py  local_llm.py  strategic_planner.py  text_encoder.py  trm.py  uground_backend.py  vision_encoder.py  vlm_subsystems.py
anorha_control/sdk/: __init__.py  client.py  server.py  tools.py
anorha_control/training/: __init__.py  async_trainer.py  modal_train.py  trm_training.py  unified_trm.py  vision_trm_training.py
anorha_control/utils/: __init__.py  browser.py  hashing.py  mouse.py  overlay.py  screen.py
