[project]
name = "anorha-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.0",
    "aiosqlite>=0.22.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "gradio>=6.5.1",
    "huggingface-hub>=1.4.0",
    "easyocr>=1.7.0",
    "imagehash>=4.3.2",
    "mss>=10.1.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.90",
    "pillow>=12.1.0",
    "playwright>=1.58.0",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "pyobjc-framework-cocoa>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-quartz>=12.1; sys_platform == 'darwin'",
    "requests>=2.32.5",
    "timm>=1.0.24",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.48.0",  # For SigLIP2
]

[project.optional-dependencies]
uground = ["qwen-vl-utils", "bitsandbytes"]

# PyTorch CUDA on Windows/Linux (macOS falls back to PyPI CPU)
[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.setuptools.packages.find]
include = ["anorha_control*"]